components/client/base/client-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: client
  labels:
    app: client
    app.kubernetes.io/name: client
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: client
    # endpoint: client
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: client
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
